--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.8.4",
+    "lucide-react": "^0.501.0",
+    "postcss": "^8.4.31",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
