--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.501.0",
     "postcss": "^8.4.31",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
